--- a/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/Apps.Cross.Desktop.ElectronWeb.csproj
+++ b/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/Apps.Cross.Desktop.ElectronWeb.csproj
@@ -24,45 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram">
-      <Visible>False</Visible>
-    </AdditionalFiles>
-    <None Include="..\..\..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
-      <Visible>False</Visible>
-    </None>
-    <None Include="..\..\..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
-      <Visible>False</Visible>
-    </None>
-
-    <AdditionalFiles Include="..\..\..\..\Architecture\Hybrid\App.layerdiagram" Link="App.layerdiagram">
-      <Visible>False</Visible>
-    </AdditionalFiles>
-    <None Include="..\..\..\..\Architecture\Hybrid\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
-      <Visible>False</Visible>
-    </None>
-    <None Include="..\..\..\..\Architecture\Hybrid\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
-      <Visible>False</Visible>
-    </None>
-
-    <AdditionalFiles Include="..\..\..\..\Architecture\Hybrid\Electron\App.layerdiagram" Link="App.layerdiagram">
-      <Visible>False</Visible>
-    </AdditionalFiles>
-    <None Include="..\..\..\..\Architecture\Hybrid\Electron\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
-      <Visible>False</Visible>
-    </None>
-    <None Include="..\..\..\..\Architecture\Hybrid\Electron\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
-      <Visible>False</Visible>
-    </None>
-
-    <AdditionalFiles Include="..\..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram" Link="App.layerdiagram">
-      <Visible>False</Visible>
-    </AdditionalFiles>
-    <None Include="..\..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
-      <Visible>False</Visible>
-    </None>
-    <None Include="..\..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
-      <Visible>False</Visible>
-    </None>
+    <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram" Visible="False" />
+    <None Include="..\..\..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" Visible="False" />
+    <None Include="..\..\..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" Visible="False" />
   </ItemGroup>
 
   <ItemGroup>
