--- a/sources/Applications/Cross-Platform/Linux/Tizen/Apps.Cross.Tizen.csproj
+++ b/sources/Applications/Cross-Platform/Linux/Tizen/Apps.Cross.Tizen.csproj
@@ -34,6 +34,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\SharedUI\Apps.Cross.SharedUI.csproj" />
   </ItemGroup>
-  
 
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram" Visible="False" />
+    <None Include="..\..\..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" Visible="False" />
+    <None Include="..\..\..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" Visible="False" />    
+  </ItemGroup>
+  
 </Project>
