--- a/sources/Applications/Shared/ViewModels/Apps.Shared.ViewModels.csproj
+++ b/sources/Applications/Shared/ViewModels/Apps.Shared.ViewModels.csproj
@@ -12,6 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Abstractions\Services\Apps.Shared.Abstractions.Services.csproj" />
+    <ProjectReference Include="..\Abstractions\ViewModels\Apps.Shared.Abstractions.ViewModels.csproj" />
+  </ItemGroup>        
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram" Visible="False" />
     <None Include="..\..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" Visible="False" />
     <None Include="..\..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" Visible="False" />
@@ -19,14 +29,5 @@
     <AdditionalFiles Include="..\..\..\Architecture\AppDirect.layerdiagram" Link="AppDirect.layerdiagram" Visible="False" />
     <None Include="..\..\..\Architecture\AppDirect.layerdiagram.layout" Link="AppDirect.layerdiagram.layout" Visible="False" />
     <None Include="..\..\..\Architecture\AppDirect.layerdiagram.suppressions" Link="AppDirect.layerdiagram.suppressions" Visible="False" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Abstractions\Services\Apps.Shared.Abstractions.Services.csproj" />
-    <ProjectReference Include="..\Abstractions\ViewModels\Apps.Shared.Abstractions.ViewModels.csproj" />
-  </ItemGroup>
+  </ItemGroup>  
 </Project>
