--- a/sources/Applications/Web/BlazorServer/Apps.Web.BlazorServer.csproj
+++ b/sources/Applications/Web/BlazorServer/Apps.Web.BlazorServer.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>8.0</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
     <UserSecretsId>4e234303-6d4a-44b3-a3e9-5058a205e4e1</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
     <AssemblyName>TheSharpFactory.Apps.Web.BlazorServer</AssemblyName>
-    <RootNamespace>TSF.Apps.Web.BlazorServer</RootNamespace>
+    <RootNamespace>TheSharpFactory.Apps.Web.BlazorServer</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
