--- a/sources/Applications/Web/MVCDirect/Apps.Web.MVCDirect.csproj
+++ b/sources/Applications/Web/MVCDirect/Apps.Web.MVCDirect.csproj
@@ -8,16 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Extentions.DependencyInjection\Common.Extentions.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\..\Domain\Extensions\Domain.Extensions.csproj" />
+    <ProjectReference Include="..\..\Shared\ViewModels.Mappers\Domain\Apps.Shared.ViewModels.Mappers.Domain.csproj" />
     <ProjectReference Include="..\..\Shared\ViewModels\Apps.Shared.ViewModels.csproj" />
     <ProjectReference Include="..\SharedUI\Apps.Web.SharedUI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
