--- a/sources/Services/Unified/appsettings.Development.json
+++ b/sources/Services/Unified/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Api": {
+    "Url": "https://localhost:6050"
+  },
+  "ConnectionStrings": {
+    "WWI": "Data Source=.;Initial Catalog=WideWorldImporters;Integrated Security=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
