Use C# 8.0 in cross platform apps

--- a/sources/Applications/Cross-Platform/Linux/Android.Blazor/Apps.Cross.Droid.Blazor.csproj
+++ b/sources/Applications/Cross-Platform/Linux/Android.Blazor/Apps.Cross.Droid.Blazor.csproj
@@ -2,6 +2,7 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<LangVersion>8.0</LangVersion>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A282ED13-E36A-4D0E-9B63-032C4A311293}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
