--- a/sources/Applications/Cross-Platform/Windows/WPF.Blazor/Apps.Cross.WPF.Blazor.csproj
+++ b/sources/Applications/Cross-Platform/Windows/WPF.Blazor/Apps.Cross.WPF.Blazor.csproj
@@ -3,6 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<LangVersion>8.0</LangVersion>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2407E563-C06F-4D81-B094-311DC85B4B4A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
