--- a/sources/Applications/Cross-Platform/Windows/WPF/Apps.Cross.WPF.csproj
+++ b/sources/Applications/Cross-Platform/Windows/WPF/Apps.Cross.WPF.csproj
@@ -3,6 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<LangVersion>8.0</LangVersion>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{26AB7E0B-36FC-4C01-BF83-913540C0D4FF}</ProjectGuid>
     <OutputType>WinExe</OutputType>
