--- a/sources/Applications/Cross-Platform/Windows/UWP.Blazor/Apps.Cross.UWP.Blazor.csproj
+++ b/sources/Applications/Cross-Platform/Windows/UWP.Blazor/Apps.Cross.UWP.Blazor.csproj
@@ -3,6 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<LangVersion>8.0</LangVersion>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{9EE60D61-357B-4454-83F1-063166D6E74A}</ProjectGuid>
     <TemplateGuid>{98C37F10-6541-44BE-B1E6-7EB3EB8C08F1}</TemplateGuid>
